basic prototype working

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <div class="jumbotron">
         <h3>Recipe Puppy Lookup</h3>
       </div>
-      <form class="mainform" action="index.html" method="post">
+      <form class="mainform" method="post">
         <label for="ingredients">Ingredients (1 per line):</label>
-        <input type="textarea" class="form-control" id="ingredients" value="">
+        <textarea rows="4" cols="5" class="form-control" id="ingredients" value=""></textarea>
         <label for="searchterm">Search Term (ex: Pizza):</label>
         <input type="text" class="form-control" id="searchterm" value="">
         <br>
