implement pagination although recipepuppy gives no indication as to how many results it has

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
         <input type="text" class="form-control" id="searchterm" value="">
         <br>
         <button type="submit" class="btn btn-primary" id="formsubmit">Search!</button>
+        <button type="button" class="btn btn-info" disabled id="pagePrev"><-Previous Page</button>
+        <button type="button" class="btn btn-info" disabled id="pageNext">Next Page -></button>
       </form>
       <div class="output card">
       </div>
