fillout readme, add page number display, cleanup comments

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <button type="submit" class="btn btn-primary" id="formsubmit">Search!</button>
         <button type="button" class="btn btn-info" disabled id="pagePrev"><-Previous Page</button>
         <button type="button" class="btn btn-info" disabled id="pageNext">Next Page -></button>
+        <span id="pageNum"></span>
       </form>
       <div class="output card">
       </div>
